# turkish-deasciifier

./: .gitignore  README.md  __init__.py  deasciifier.py  deasciify  deasciify.1  deasciify.py  pyproject.toml  setup.py  tests.py  turkish-deasciify  turkish-deasciify.1
debian/: .gitignore  changelog  control  copyright  manpages  rules
turkish/: __init__.py  __main__.py  deasciifier.py
